--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -24,7 +24,7 @@
 
 
 /*    .block { height:1px; width:1px; float:left; margin:1px; white-space:normal; border:1px solid #C5C4CE; font-size:0; }*/
-    .block { height:7px; width:7px; float:left; margin:0; white-space:normal; border:0.5px solid #fff !important; font-size:0; }
+    .block { height:7px; width:7px; float:left; margin:0; white-space:normal; border:0.5px solid #fff !important; font-size:0; background-color:#bbbbbb; }
     .confined { background-color:#7767C6; }
     .free { background-color:#C5C4CE; }
     .overlap { background-color:#A59DC9; } 
