--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -63,15 +63,15 @@
     #viewSwitch { float:left; }
 
     @media (max-width:840px) { 
-      .chatter { width:100% !important; clear:both; text-align:left; }
+/*      .chatter { width:100% !important; clear:both; text-align:left; }
       #legend { float:none; margin-top:0; }
       .wrapper-demo { width:100%;  }
       #topmonths { display:none; }
       #viewSwitch { float:none; width:100%; }
       #wrapper { width:100%; text-align:center; }
-      .month { width:8%; }
+/*      .month { width:8%; }*/
       .yearLabel { display:none; }
-      .month { border-bottom:0; }
+      .month { border-bottom:0; }*/
 
     }
   </style> 
@@ -90,15 +90,8 @@
               <ul class="dropdown months" tabindex="1">
                 <li class="step selected" data="204314" index="0">Israel Musawwir</li>
                 <li class="step" data="213688" index="1">Sean Ellis</li>
-                <li class="step" data="196309" index="2">Marcus Mable</li>
+                <li class="step" data="208543" index="2">Cesar De la Garza</li>
                 <li class="step" data="232429" index="3">Anthony Nasseff</li>
-                <li class="step" data="214486" index="4">Michael Wadena</li>
-                <li class="step" data="219696" index="5">Michael Fleming</li>
-                <li class="step" data="104759" index="6">Charles Noble</li>
-                <li class="step" data="230542" index="7">Wayne LittleSoldier</li>
-                <li class="step" data="218377" index="8">Dylan Ganske</li>
-                <li class="step" data="236728" index="9">Elsa Cabana</li>
-                <li class="step" data="231803" index="10">Dakota Lafave</li>
               </ul>
           </div>
         ​</div>
