--- a/vikings2016/index.html
+++ b/vikings2016/index.html
@@ -44,8 +44,8 @@
       .wrapper-dropdown-1 { width:100%; margin-right:auto; margin-left:auto; }
       .wrapper-dropdown-1.active .dropdown {  opacity: 1; pointer-events: auto;border-radius: 0 !important; }
 
-      .touchdown { border:2px solid #f00; }
-      .interception { border:2px solid #00f; }
+      .touchdown { border:2px solid #00f; }
+      .interception { border:2px solid #f00; }
       .both { border:2px solid #f0f; }
 
       .bigNum { font-size:2em !important; }
