--- a/vikings2016/index.html
+++ b/vikings2016/index.html
@@ -201,6 +201,7 @@ function crunchPassing(week){
   $(".remove").removeClass("p5");
   $(".remove").removeClass("touchdown");
   $(".remove").removeClass("interception");
+  $(".remove").removeClass("both");
   $(".remove").html("");
 
   var totalYards = 0;
