--- a/vikings2016/index.html
+++ b/vikings2016/index.html
@@ -521,7 +521,7 @@ if (week != 0){
       }
     }
   // }
-    qb = "All QB";
+    qb = "Sam Bradford";
 }
 
   if ((behindLOSLeftAtt / att) >= 0.20) { $("#behindlos .left").addClass('p5'); }
